fixed up the logo and worked on the spacing of the Nav bar. Might revisit the spacing above and below the nav content.

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
 
-  margin: 0 0 20px;
+  margin: 5px 0px 10px;
   background-color: #fcf7e6;
   overflow: hidden;
   border-bottom: 4px dotted #E1AD01;
@@ -30,9 +30,9 @@
   color: #f2f2f2;
   background-color: #fcf7e6;
   text-align: center;
-  padding: 24px 10px;
+  padding: 25px 10px;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 18px;
 
   /* these last two make the logout button in
   the nav bar look like another link */
@@ -47,6 +47,4 @@
 
 .svg_logo {
   height: 48px;
-  width: 112px;
-  padding-left: 20px;
 }
